# coding

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ans.txt  cmake_install.cmake  coding.cbp  gen  generator.cpp  input.txt  main  main.cpp  main.cpp.BAK  main.py  output.txt  template.cpp  test  test.cpp  test.txt  wakeup.py  wakeup.sh
.github/workflows/: main.yml
.trunk/: trunk.yaml
OPT/: Лекции ФТЛ.md
OPT/hse/: task 1 (100 баллов).cpp  task 2 (100 баллов).cpp  task 2 (50 баллов).cpp  task 3.cpp
OPT/structures/: fenwick.cpp  segment tree.cpp  sqrt.cpp
OPT/templates/: simple.cpp  template.cpp
OPT/tink-lectures-main/: README.md
OPT/ВСОШ (муник)/: task 1.py  task 2.py  task 3.cpp  task 4.cpp
SETUP/: setup.py
TEST/: build.py  clear.py  colorize.py  data.py  generate.py  test.py
algorithms/graphs/: bellman-ford.cpp  dfs.cpp  segment-tree.cpp
algorithms/strings/: z-function.cpp
cses/: CMakeCache.txt  CMakeLists.txt  template.cpp
cses/tasks/: Increasing Array.cpp  Missing Number.cpp  Number Spiral.cpp  Permutations.cpp  Repetitions.cpp  Weird Algorithm.cpp
file/: input.txt
tasks (demian)/1 day/: task 2.cpp  task 4.cpp
tasks (demian)/day 1/: task 1.cpp  task 2.cpp  task 3.cpp  task 4.cpp
tasks (demian)/day 12/: task 1.cpp  task 2.cpp  task 3.cpp  task 4.cpp
tasks (demian)/day 2/: homework.cpp  task 1.cpp  task 2.cpp  task 3.cpp  task 4.cpp  task 5.cpp
tasks (demian)/day 3/: task 1.cpp  task 2.cpp  task 3.cpp  task 4.cpp
tasks (demian)/day 5/: task 1.cpp  (+1 more)
technocup/: temp.cpp
templates/: simple.cpp  template.cpp
(+247 files in other folders)
